--- a/package.json
+++ b/package.json
@@ -7,16 +7,24 @@
   "license": "MIT",
   "dependencies": {
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.13",
     "@types/node": "^22.7.6",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "firebase-admin": "^12.6.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.7",
+    "supertest": "^7.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   },
   "scripts": {
     "start": "ts-node src/app.ts",
-    "dev": "nodemon --exec ts-node src/app.ts"
+    "dev": "nodemon --exec ts-node src/app.ts",
+    "test": "jest --verbose"
+  },
+  "devDependencies": {
+    "@types/supertest": "^6.0.2",
+    "ts-jest": "^29.2.5"
   }
 }
