--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,7 +57,14 @@ jobs:
         export_default_credentials: true
 
     - name: Deploy to Google Cloud Run
+      env:
+        FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
+        FIREBASE_CLIENT_EMAIL: ${{ secrets.FIREBASE_CLIENT_EMAIL }}
+        FIREBASE_PRIVATE_KEY: ${{ secrets.FIREBASE_PRIVATE_KEY }}
+        FIREBASE_DATABASE_URL: ${{ secrets.FIREBASE_DATABASE_URL }}
       run: |
+        echo "FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}" \
+        echo "FIREBASE_CLIENT_EMAIL: ${{ secrets.FIREBASE_CLIENT_EMAIL }}" \
         gcloud run deploy node-firebase \
           --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ github.sha }} \
           --platform managed \
